--- a/index.html
+++ b/index.html
@@ -34,12 +34,8 @@
 
             <p>Front End Developer with <span class="bold">5+ years of experience</span> in developing quality software for IOT, Cloud, Marketing and Security domains. 
                 Currently Working with technologies like <span class="bold">HTML5, CSS3, JavaScript (es6), React, Angular, Docker, and MongoDB</span>.</p>
-            <br />
-            <p>Also I have curiosity for learning new things. These days I am spending more time on full stack development, testing, clean code.
-            </p>
-            <br />
-
-            <p><span class="bold">Technical Stack:</span></p>
+            <div style="margin-top: 10px;"></div>    
+            <p><span class="bold" style="text-decoration: underline;">Technical Stack:</span></p>
             <p><span class="bold">Front End: </span> HTML5, CSS3, JavaScript, React, Angular, Svelte </p>
             <p><span class="bold">CSS Frameworks: </span> Bootstrap, Tailwind, Material UI, SASS </p>
             <p><span class="bold">Backend: </span>Node, Graphql</p>
